<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/managelayout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <View
            android:id="@+id/topdiv5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/colorSky" />

        <EditText
            android:id="@+id/text_deletegrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorEarth"
            android:ems="10"
            android:inputType="none"
            android:text="@string/delgrpmessage" />

        <Button
            android:id="@+id/btn_deletegrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:text="@string/btn_deletegrp"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/middiv5a"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="5"
            android:background="@color/colorDirt" />

        <EditText
            android:id="@+id/text_grpaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/colorEarth"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/text_setgrpaction"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            android:scrollHorizontally="false"/>

        <Button
            android:id="@+id/btn_grpaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorEarth"
            android:text="@string/btn_setgrpaction"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/middiv5b"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="5"
            android:background="@color/colorDirt" />

        <Button
            android:id="@+id/btn_grpcodename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorEarth"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/middiv5c"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/colorDirt" />

        <Button
            android:id="@+id/btn_turnonearthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorEarth"
            android:text="@string/btn_earthdayisoff"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/btmdiv5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/colorSky" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/managelayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/img_earthday"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="20"
            android:adjustViewBounds="false"
            android:clickable="false"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            app:layout_constrainedHeight="false"
            app:layout_constrainedWidth="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.293"
            app:srcCompat="@drawable/earthday" />

        <Button
            android:id="@+id/btn_grpcodename2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorEarth"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/middiv5c2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/colorDirt" />

        <Button
            android:id="@+id/btn_turnoffearthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorEarth"
            android:text="@string/btn_earthdayison"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/btmdiv52"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:background="@color/colorSky" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>