<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lin_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_earthheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorEarth"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/img_earthday2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/earthpicdesc"
                android:cropToPadding="true"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/scroll"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/earthday" />

            <TextView
                android:id="@+id/text_grpcodename2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorEarth"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                android:textSize="28sp" />

            <View
                android:id="@+id/divscroll2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/colorSky" />

            <TextView
                android:id="@+id/text_grpaction2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:background="@color/colorEarth"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <View
                android:id="@+id/divscroll3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:background="@color/colorSky" />

            <EditText
                android:id="@+id/text_leavegrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorEarth"
                android:ems="10"
                android:inputType="none"
                android:text="@string/text_leavegrp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_leavegrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:text="@string/btn_leavegrp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <View
                android:id="@+id/divscroll4"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:background="@color/colorSky" />

            <TextView
                android:id="@+id/text_memheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorEarth"
                android:text="@string/text_memheader"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/scroll"
                app:layout_constraintTop_toBottomOf="@+id/scroll"
                app:layout_constraintVertical_bias="1.0" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>